added image loading

--- a/knot.html
+++ b/knot.html
@@ -32,5 +32,10 @@
         </td>
       </tr>
     </table>
+    <div id="drop-area">
+      <div class="drop-border">
+        <p>Drop images here</p>
+      </div>
+    </div>
   </body>
 </html>
