added knot identification

--- a/knot.html
+++ b/knot.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="kq.js"></script>
     <script src="knot.js"></script>
+    <script src="knotinfo.js"></script>
   </head>
   <body>
     <table id="ui-table">
@@ -34,7 +35,7 @@
     </table>
     <div id="drop-area">
       <div class="drop-border">
-        <p>Drop images here</p>
+        Drop images here
       </div>
     </div>
   </body>
