switched to greedy algorithm for matching, added missing StackBlur, made segment intersections more robust

--- a/knotfolio.html
+++ b/knotfolio.html
@@ -9,7 +9,7 @@
       <tr>
         <td>
           <div id="header">
-            <div id="project-name">LinkEdit</div>
+            <div id="project-name">KnotFolio</div>
             <div id="undo">
               <input type="button" class="undo" value="&lt;" title="Undo">
               <span class="undo-state">1/10</span>
