added links to github

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
               <input type="button" class="redo" value="&gt;" title="Redo">
             </div>
           </div>
-
+        </td>
+        <td>
+          <div id="ref-links">
+            <a href="https://github.com/kmill/knotfolio" target="_blank">GitHub</a>
+            | <a href="https://github.com/kmill/knotfolio/wiki" target="_blank">Help</a>
+          </div>
         </td>
       </tr>
       <tr>
