put some knot data in details tags

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         </td>
       </tr>
     </table>
+    <div id="space"></div>
+    <div id="contact">
+      Questions, comments, bug reports, favorite knots?<br>
+      E-mail me at <a href="mailto:kmill@math.berkeley.edu" target="_blank">kmill@math.berkeley.edu</a>
+    </div>
+
     <div id="drop-area">
       <div class="drop-border">
         Drop images here
