--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <tr>
         <td>
           <div id="header">
-            <div id="project-name">KnotFolio</div>
+            <div id="project-name"><em>Virtual</em> KnotFolio</div>
             <div id="undo">
               <input type="button" class="undo" value="&lt;" title="Undo">
               <span class="undo-state">1/10</span>
