added Conway potential

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8"/>
     <link rel="stylesheet" href="style.css">
-    <script src="./src/main.mjs"></script>
+    <script src="bundle.js"></script>
   </head>
   <body>
     <table id="ui-table">
