--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="style.css">
-    <script src="bundle.js"></script>
+    <script src="main.js"></script>
   </head>
   <body>
     <table id="ui-table">
