--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
+    <script src="knotinfo.js"></script>
+    <script src="knotinfo_0-10.js" defer></script>
   </head>
   <body>
     <table id="ui-table">
