--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,7 @@
         <td>
           <div id="ref-links">
             <a href="https://github.com/kmill/knotfolio" target="_blank">GitHub</a>
+            | <a href="versions.html" target="_blank">Releases</a>
             | <a href="https://github.com/kmill/knotfolio/wiki" target="_blank">Help</a>
           </div>
         </td>
