--- a/versions.html
+++ b/versions.html
@@ -7,7 +7,15 @@
     <h1>Releases of KnotFolio</h1>
     <p>Here are links to different versions of KnotFolio.</p>
     <dl>
-      <dt><a href="index.html">2021-feb-13 (current)</a></dt>
+      <dt><a href="index.html">2021-apr-20 (current)</a></dt>
+      <dd>
+        Fixed KnotTheory PD convention.
+        Added "beautify" isotopy tool.
+        Changed default image thresholding value to be better for knotinfo images.
+        Sped up calculation of Conway potential.
+        Made lazy loading system for knot data.
+      </dd>
+      <dt><a href="version-2021-feb-13/index.html">2021-feb-13</a></dt>
       <dd>Added Conway potential.</dd>
       <dt><a href="version-2019-sep-15/index.html">2019-sep-15</a></dt>
       <dd>First release.</dd>
