--- a/version-2021-feb-13/index.html
+++ b/version-2021-feb-13/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
-    <script src="knotinfo.js"></script>
-    <script src="knotinfo_0-10.js" defer></script>
+    <script src="bundle.js"></script>
   </head>
   <body>
     <table id="ui-table">
