--- a/versions.html
+++ b/versions.html
@@ -7,7 +7,10 @@
     <h1>Releases of KnotFolio</h1>
     <p>Here are links to different versions of KnotFolio.</p>
     <dl>
-      <dt><a href="index.html">2021-apr-20 (current)</a></dt>
+      <dt><a href="index.html">2021-04-21 (current)</a></dt>
+      <dd>Fixed infinite loop in "beautify" tool.
+      </dd>
+      <dt><a href="version-2021-04-20/index.html">2021-04-20</a></dt>
       <dd>
         Fixed KnotTheory PD convention.
         Added "beautify" isotopy tool.
@@ -15,9 +18,9 @@
         Sped up calculation of Conway potential.
         Made lazy loading system for knot data.
       </dd>
-      <dt><a href="version-2021-feb-13/index.html">2021-feb-13</a></dt>
+      <dt><a href="version-2021-02-13/index.html">2021-02-13</a></dt>
       <dd>Added Conway potential.</dd>
-      <dt><a href="version-2019-sep-15/index.html">2019-sep-15</a></dt>
+      <dt><a href="version-2019-09-15/index.html">2019-09-15</a></dt>
       <dd>First release.</dd>
     </dl>
   </body>
