--- a/versions.html
+++ b/versions.html
@@ -7,7 +7,9 @@
     <h1>Releases of KnotFolio</h1>
     <p>Here are links to different versions of KnotFolio.</p>
     <dl>
-      <dt><a href="index.html">2021-04-21 (current)</a></dt>
+      <dt><a href="index.html">2021-04-22 (current)</a></dt>
+      <dd>Improved beauty of "beautify" tool.</dd>
+      <dt><a href="version-2021-04-21/index.html">2021-04-21</a></dt>
       <dd>Fixed infinite loop in "beautify" tool.
       </dd>
       <dt><a href="version-2021-04-20/index.html">2021-04-20</a></dt>
