add "clear" button

--- a/static/index.html
+++ b/static/index.html
@@ -14,9 +14,11 @@
           <div id="header">
             <div id="project-name">KnotFolio</div>
             <div id="undo">
-              <input type="button" class="undo" value="&lt;" title="Undo">
+              <input type="button" class="action-clear" value="Clear" title="Clear">
+              <span class="ui-spacer"></span>
+              <input type="button" class="action-undo" value="&lt;" title="Undo">
               <span class="undo-state">1/10</span>
-              <input type="button" class="redo" value="&gt;" title="Redo">
+              <input type="button" class="action-redo" value="&gt;" title="Redo">
             </div>
           </div>
         </td>
