chore(index): update e-mail address

--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
     <div id="space"></div>
     <div id="contact">
       Questions, comments, bug reports, favorite knots?<br>
-      E-mail me at <a href="mailto:kmill@math.berkeley.edu" target="_blank">kmill@math.berkeley.edu</a>
+      E-mail me at <a href="mailto:kymiller@ucsc.edu" target="_blank">kymiller@ucsc.edu</a>
     </div>
 
     <div id="drop-area">
