--- a/version-2021-04-22/index.html
+++ b/version-2021-04-22/index.html
@@ -14,11 +14,9 @@
           <div id="header">
             <div id="project-name">KnotFolio</div>
             <div id="undo">
-              <input type="button" class="action-clear" value="Clear" title="Clear">
-              <span class="ui-spacer"></span>
-              <input type="button" class="action-undo" value="&lt;" title="Undo">
+              <input type="button" class="undo" value="&lt;" title="Undo">
               <span class="undo-state">1/10</span>
-              <input type="button" class="action-redo" value="&gt;" title="Redo">
+              <input type="button" class="redo" value="&gt;" title="Redo">
             </div>
           </div>
         </td>
@@ -45,7 +43,7 @@
     <div id="space"></div>
     <div id="contact">
       Questions, comments, bug reports, favorite knots?<br>
-      E-mail me at <a href="mailto:kymiller@ucsc.edu" target="_blank">kymiller@ucsc.edu</a>
+      E-mail me at <a href="mailto:kmill@math.berkeley.edu" target="_blank">kmill@math.berkeley.edu</a>
     </div>
 
     <div id="drop-area">
