feat(identify): virtual knot identification
To trigger, just make sure a knot has at least one virtual crossing (for
example by virtual reidemeister I)

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <script src="main.js"></script>
     <script src="knotinfo.js"></script>
     <script src="knotinfo_0-10.js" defer></script>
+    <script src="green.js"></script>
   </head>
   <body>
     <table id="ui-table">
