--- a/versions.html
+++ b/versions.html
@@ -7,7 +7,9 @@
     <h1>Releases of KnotFolio</h1>
     <p>Here are links to different versions of KnotFolio.</p>
     <dl>
-      <dt><a href="index.html">2022-10-16 (current)</a></dt>
+      <dt><a href="index.html">2022-10-20 (current)</a></dt>
+      <dd>Virtual knot identification for any knot with at least one virtual crossing (use a virtual Reidemeister I move if necessary).</dd>
+      <dt><a href="versions-2022-10-16/index.html">2022-10-16</a></dt>
       <dd>Cabled Jones polynomials, virtual knots, and cabled arrow polynomials. (No virtual knot identification in this release.)</dd>
       <dt><a href="version-2021-04-22/index.html">2021-04-22</a></dt>
       <dd>Improved beauty of "beautify" tool.</dd>
