--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
-    <script src="knotinfo.js"></script>
-    <script src="knotinfo_0-10.js" defer></script>
+    <script src="knotinfo.js?v=2"></script>
+    <script src="knotinfo_0-10.js?v=2" defer></script>
+    <script src="green.js?v=2"></script>
   </head>
   <body>
     <table id="ui-table">
