--- a/versions.html
+++ b/versions.html
@@ -8,7 +8,7 @@
     <p>Here are links to different versions of KnotFolio.</p>
     <dl>
       <dt><a href="index.html">2022-10-20 (current)</a></dt>
-      <dd>Virtual knot identification for any knot with at least one virtual crossing (use a virtual Reidemeister I move if necessary).</dd>
+      <dd>Virtual knot identification for knots with at least one virtual crossing (use a virtual Reidemeister I move if necessary).</dd>
       <dt><a href="versions-2022-10-16/index.html">2022-10-16</a></dt>
       <dd>Cabled Jones polynomials, virtual knots, and cabled arrow polynomials. (No virtual knot identification in this release.)</dd>
       <dt><a href="version-2021-04-22/index.html">2021-04-22</a></dt>
