--- a/versions.html
+++ b/versions.html
@@ -7,7 +7,9 @@
     <h1>Releases of KnotFolio</h1>
     <p>Here are links to different versions of KnotFolio.</p>
     <dl>
-      <dt><a href="index.html">2022-10-20 (current)</a></dt>
+      <dt><a href="index.html">2023-06-19 (current)</a></dt>
+      <dd>Adds checkbox to toggle whether or not to compute invariants and identify the knot, useful to get PD codes of large knots.</dd>
+      <dt><a href="version-2022-10-20/index.html">2022-10-20</a></dt>
       <dd>Virtual knot identification for knots with at least one virtual crossing (use a virtual Reidemeister I move if necessary).</dd>
       <dt><a href="version-2022-10-16/index.html">2022-10-16</a></dt>
       <dd>Cabled Jones polynomials, virtual knots, and cabled arrow polynomials. (No virtual knot identification in this release.)</dd>
